Mon Aug 29 14:08:42 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tao/GIOP_Message_Base.h:
        * tao/Strategies/UIOP_Transport.cpp:
        * tao/Strategies/DIOP_Transport.cpp:
        * tao/Strategies/SHMIOP_Transport.cpp:

          Added markers that aid in specializing TAO's pluggable messaging
          implementation with either GIOP or GIOP_Lite when the type of
          messaging object is known a priori.

Mon Aug 29 12:08:16 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/Logging_Service/Basic_Logging_Service/Basic_Logging_Server.cpp:
	* orbsvcs/Logging_Service/Event_Logging_Service/Event_Logging_Server.cpp:
	* orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Server.cpp:

	  Changed to clarify error message output when service
	  initialization fails.

Mon Aug 29 09:03:55 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tao/default_resource.cpp:
        * tao/Strategies/advanced_resource.cpp:

          Added markers within the code to specialize TAO components with
          concrete implementations. This commit relates to the commit on
          Sun Aug 28 14:25:07 2005 Arvind S. Krishna
          <arvindk@dre.vanderbilt.edu> on specializing middleware
          components. The motivation here is added for sake of clarity.

          As a part of the Feature Oriented Customizer (FOCUS) tool being
          developed in my research, we are trying to specialize framework
          implementation and strategies within middleware with concrete
          counterparts when their implementation/type is known a priori.
          FOCUS provides an XML based transformation engine, where the
          specialization transformations are captured in XML file and a
          weaver specializes the code.

          To help in this transformation process, this commit adds markers
          within the source code. These markers are added as special
          comments. For example, //@@